Correction du middleware auth, des routes et controllers

--- a/backend/.env
+++ b/backend/.env
@@ -5,6 +5,6 @@ DB_USER=root
 DB_PASS=password
 
 JWT_SECRET=ozehvzZKD1G1ZOYDVdezydezuy627386219dhzefez
-JWT_DURING=1 hour
+JWT_DURING=24h
 
 ADMIN_ACCESS=admin@gmail.com
